# ripple_detection

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/: RELEASE_SETUP.md
.github/workflows/: PR-test.yml  release.yml
examples/: Examples.ipynb  detection_examples.ipynb  ripple_detection_tutorial.ipynb  test_individual_algorithm_components.ipynb
ripple_detection/: __init__.py  core.py  detectors.py  ripplefilter.mat  simulate.py
tests/: conftest.py  test_core.py  test_detectors.py  test_properties.py  test_ripple_detection.py  test_simulate.py  test_snapshots.py
tests/snapshots/test_snapshots/test_detector_comparison/: detector_comparison
tests/snapshots/test_snapshots/test_karlsson_multichannel_merging/: merged_durations
tests/snapshots/test_snapshots/test_karlsson_single_channel_output/: first_detection
tests/snapshots/test_snapshots/test_kay_multichannel_output/: detection_times
tests/snapshots/test_snapshots/test_kay_single_channel_output/: columns  first_detection
tests/snapshots/test_snapshots/test_multiunit_hse_output/: hse_stats
tests/snapshots/test_snapshots/test_roumis_output/: roumis_times
